# python-project-83

./: .env  .gitignore  Dockerfile  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: project-check.yml
page_analyzer/: __init__.py  app.py  common.py  database.py  parser.py  validator.py
page_analyzer/static/: style.css
page_analyzer/templates/: index.html  internal_server_error.html  layout.html  not_found.html  page_not_found.html  url.html  url_page.html  urls.html
tests/: conftest.py  test_common.py  test_parser.py  test_validator.py
tests/fixtures/: html_page.html
