[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer. Specified pages analysis for SEO-suitability"
license = "Proprietary"
authors = ["zluuba <zluyba.nikitina@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zluuba/page-analyzer"
packages = [{include = "page_analyzer"}]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Natural Language :: Russian",
    "Framework :: Flask",
    "Topic :: Internet"
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
responses = "^0.22.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
